--- a/package.json
+++ b/package.json
@@ -12,16 +12,49 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.5",
+    "@angular/cdk": "^10.2.4",
     "@angular/common": "~10.1.5",
     "@angular/compiler": "~10.1.5",
     "@angular/core": "~10.1.5",
     "@angular/forms": "~10.1.5",
+    "@angular/material": "^10.2.4",
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@auth0/angular-jwt": "^5.0.1",
+    "@datorama/akita": "^5.2.3",
+    "@datorama/akita-ngdevtools": "^5.0.3",
+    "@types/diff-match-patch": "^1.0.32",
+    "diff-match-patch": "^1.0.5",
+    "gravatar": "^1.8.1",
+    "moment": "^2.28.0",
+    "ngx-markdown": "^10.1.1",
+    "ngx-moment": "^5.0.0",
+    "ngx-monaco-editor": "^8.1.1",
+    "rangy": "^1.3.0",
+    "@myrmidon/cadmus-admin": "^0.0.3",
+    "@myrmidon/cadmus-api": "^0.0.3",
+    "@myrmidon/cadmus-core": "^0.0.2",
+    "@myrmidon/cadmus-item-editor": "^0.0.3",
+    "@myrmidon/cadmus-item-list": "^0.0.3",
+    "@myrmidon/cadmus-item-search": "^0.0.3",
+    "@myrmidon/cadmus-login": "^0.0.3",
+    "@myrmidon/cadmus-material": "^0.0.2",
+    "@myrmidon/cadmus-part-general-pg": "^0.0.3",
+    "@myrmidon/cadmus-part-general-ui": "^0.0.3",
+    "@myrmidon/cadmus-part-philology-pg": "^0.0.3",
+    "@myrmidon/cadmus-part-philology-ui": "^0.0.3",
+    "@myrmidon/cadmus-reset-password": "^0.0.3",
+    "@myrmidon/cadmus-state": "^0.0.4",
+    "@myrmidon/cadmus-thesaurus-editor": "^0.0.5",
+    "@myrmidon/cadmus-thesaurus-list": "^0.0.3",
+    "@myrmidon/cadmus-ui": "^0.0.3",
+    "@myrmidon/cadmus-ui-pg": "^0.0.3",
+    "@myrmidon/cadmus-user": "^0.0.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.6",
