--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2",
-    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@auth0/angular-jwt": "^5.0.1",
     "@datorama/akita": "^5.2.3",
     "@datorama/akita-ngdevtools": "^5.0.3",
@@ -34,7 +34,7 @@
     "moment": "^2.28.0",
     "ngx-markdown": "^10.1.1",
     "ngx-moment": "^5.0.0",
-    "ngx-monaco-editor": "^8.1.1",
+    "ngx-monaco-editor": "^10.0.0-beta.1",
     "rangy": "^1.3.0",
     "@myrmidon/cadmus-admin": "^0.0.4",
     "@myrmidon/cadmus-api": "^0.0.4",
