--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
               {
                 "glob": "**/*",
                 "input": "node_modules/ngx-monaco-editor/assets/monaco",
-                "output": "/assets/monaco"
+                "output": "./assets/monaco"
               }
             ],
             "styles": [
@@ -53,7 +53,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": true,
-              "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
