--- a/docker-compose_linux-vol.yml
+++ b/docker-compose_linux-vol.yml
@@ -46,7 +46,7 @@ services:
       - cadmus-network
 
   cadmus-api:
-    image: vedph2020/cadmus_mqdq_api:1.0.3
+    image: vedph2020/cadmus_mqdq_api:1.0.4
     ports:
       # https://stackoverflow.com/questions/48669548/why-does-aspnet-core-start-on-port-80-from-within-docker
       - 53323:80
@@ -68,13 +68,13 @@ services:
       - SENDGRID__SENDEREMAIL=info@cadmus.com
       - SENDGRID__SENDERNAME=cadmus
       - SENDGRID__APIKEY=todo
-      - SERILOG__CONNECTIONSTRING=mongodb://cadmus-mongo:27017/cadmus-mqdq-logs
+      - SERILOG__CONNECTIONSTRING=mongodb://cadmus-mongo:27017/{0}-logs
       - STOCKUSERS__0__PASSWORD=P4ss-W0rd!
     networks:
       - cadmus-network
 
   cadmus-web:
-    image: vedph2020/cadmus-mqdq-app:1.0.13
+    image: vedph2020/cadmus-mqdq-app:1.0.14
     ports:
       - 4200:80
     depends_on:
