--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "@angular/common": "~12.0.3",
     "@angular/compiler": "~12.0.3",
     "@angular/core": "~12.0.3",
-    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/flex-layout": "12.0.0-beta.34",
     "@angular/forms": "~12.0.3",
-    "@angular/material": "^12.0.2",
+    "@angular/material": "^12.0.4",
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "@auth0/angular-jwt": "^5.0.2",
-    "@datorama/akita": "^6.1.3",
+    "@datorama/akita": "^6.2.0",
     "@datorama/akita-ngdevtools": "^6.0.0",
     "@myrmidon/cadmus-admin": "0.0.6",
     "@myrmidon/cadmus-api": "0.0.12",
-    "@myrmidon/cadmus-core": "0.0.22",
+    "@myrmidon/cadmus-core": "0.0.23",
     "@myrmidon/cadmus-item-editor": "0.0.13",
     "@myrmidon/cadmus-item-list": "0.0.6",
     "@myrmidon/cadmus-item-search": "0.0.8",
@@ -41,14 +41,14 @@
     "@myrmidon/cadmus-state": "0.0.10",
     "@myrmidon/cadmus-thesaurus-editor": "0.0.7",
     "@myrmidon/cadmus-thesaurus-list": "0.0.6",
-    "@myrmidon/cadmus-ui": "0.0.32",
+    "@myrmidon/cadmus-ui": "0.0.33",
     "@myrmidon/cadmus-ui-pg": "0.0.7",
     "@myrmidon/cadmus-user": "0.0.5",
     "@types/diff-match-patch": "^1.0.32",
     "diff-match-patch": "^1.0.5",
     "gravatar": "^1.8.1",
     "moment": "^2.29.1",
-    "ngx-markdown": "^11.1.3",
+    "ngx-markdown": "^12.0.1",
     "ngx-moment": "^5.0.0",
     "ngx-monaco-editor": "^9.0.0",
     "rangy": "^1.3.0",
