--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.7",
-    "@angular/cdk": "^12.2.7",
-    "@angular/common": "~12.2.7",
-    "@angular/compiler": "~12.2.7",
-    "@angular/core": "~12.2.7",
+    "@angular/animations": "~12.2.10",
+    "@angular/cdk": "^12.2.10",
+    "@angular/common": "~12.2.10",
+    "@angular/compiler": "~12.2.10",
+    "@angular/core": "~12.2.10",
     "@angular/flex-layout": "12.0.0-beta.35",
-    "@angular/forms": "~12.2.7",
-    "@angular/material": "^12.2.7",
-    "@angular/platform-browser": "~12.2.7",
-    "@angular/platform-browser-dynamic": "~12.2.7",
-    "@angular/router": "~12.2.7",
+    "@angular/forms": "~12.2.10",
+    "@angular/material": "^12.2.10",
+    "@angular/platform-browser": "~12.2.10",
+    "@angular/platform-browser-dynamic": "~12.2.10",
+    "@angular/router": "~12.2.10",
     "@auth0/angular-jwt": "^5.0.2",
-    "@datorama/akita": "^6.2.3",
+    "@datorama/akita": "^6.2.4",
     "@datorama/akita-ngdevtools": "^6.0.1",
     "@myrmidon/cadmus-admin": "0.0.8",
     "@myrmidon/cadmus-api": "0.0.14",
@@ -33,11 +33,12 @@
     "@myrmidon/cadmus-item-search": "0.0.8",
     "@myrmidon/cadmus-login": "0.0.6",
     "@myrmidon/cadmus-material": "0.0.6",
-    "@myrmidon/cadmus-part-general-pg": "0.0.13",
-    "@myrmidon/cadmus-part-general-ui": "0.0.29",
+    "@myrmidon/cadmus-part-general-pg": "0.1.0",
+    "@myrmidon/cadmus-part-general-ui": "0.1.0",
     "@myrmidon/cadmus-part-philology-pg": "0.0.8",
     "@myrmidon/cadmus-part-philology-ui": "0.0.10",
     "@myrmidon/cadmus-profile-core": "0.0.1",
+    "@myrmidon/cadmus-refs-doc-references": "^0.1.0",
     "@myrmidon/cadmus-reset-password": "0.0.5",
     "@myrmidon/cadmus-state": "0.0.10",
     "@myrmidon/cadmus-thesaurus-editor": "0.0.8",
@@ -58,9 +59,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.7",
-    "@angular/cli": "~12.2.7",
-    "@angular/compiler-cli": "~12.2.7",
+    "@angular-devkit/build-angular": "~12.2.10",
+    "@angular/cli": "~12.2.10",
+    "@angular/compiler-cli": "~12.2.10",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
