--- a/package.json
+++ b/package.json
@@ -11,66 +11,64 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.1",
-    "@angular/cdk": "^13.1.1",
-    "@angular/common": "~13.1.1",
-    "@angular/compiler": "~13.1.1",
-    "@angular/core": "~13.1.1",
+    "@angular/animations": "^14.0.2",
+    "@angular/cdk": "^14.0.2",
+    "@angular/common": "^14.0.2",
+    "@angular/compiler": "^14.0.2",
+    "@angular/core": "^14.0.2",
     "@angular/flex-layout": "13.0.0-beta.36",
-    "@angular/forms": "~13.1.1",
-    "@angular/material": "^13.1.1",
-    "@angular/platform-browser": "~13.1.1",
-    "@angular/platform-browser-dynamic": "~13.1.1",
-    "@angular/router": "~13.1.1",
+    "@angular/forms": "^14.0.2",
+    "@angular/material": "^14.0.2",
+    "@angular/platform-browser": "^14.0.2",
+    "@angular/platform-browser-dynamic": "^14.0.2",
+    "@angular/router": "^14.0.2",
     "@auth0/angular-jwt": "^5.0.2",
-    "@datorama/akita": "^7.0.1",
+    "@datorama/akita": "^7.1.1",
     "@datorama/akita-ngdevtools": "^7.0.0",
-    "@myrmidon/auth-jwt-admin": "0.0.2",
-    "@myrmidon/auth-jwt-login": "0.0.2",
-    "@myrmidon/cadmus-api": "1.0.1",
-    "@myrmidon/cadmus-core": "1.0.0",
-    "@myrmidon/cadmus-item-editor": "1.0.0",
-    "@myrmidon/cadmus-item-list": "1.0.0",
-    "@myrmidon/cadmus-item-search": "1.0.0",
-    "@myrmidon/cadmus-part-general-pg": "1.0.2",
-    "@myrmidon/cadmus-part-general-ui": "1.0.4",
-    "@myrmidon/cadmus-part-philology-pg": "1.0.0",
-    "@myrmidon/cadmus-part-philology-ui": "1.0.0",
-    "@myrmidon/cadmus-profile-core": "1.0.0",
-    "@myrmidon/cadmus-refs-asserted-chronotope": "0.0.2",
+    "@myrmidon/auth-jwt-admin": "0.1.0",
+    "@myrmidon/auth-jwt-login": "0.1.0",
+    "@myrmidon/cadmus-api": "1.1.0",
+    "@myrmidon/cadmus-core": "1.1.0",
+    "@myrmidon/cadmus-item-editor": "1.1.0",
+    "@myrmidon/cadmus-item-list": "1.1.0",
+    "@myrmidon/cadmus-item-search": "1.1.0",
+    "@myrmidon/cadmus-part-general-pg": "1.1.0",
+    "@myrmidon/cadmus-part-general-ui": "1.1.0",
+    "@myrmidon/cadmus-part-philology-pg": "1.1.0",
+    "@myrmidon/cadmus-part-philology-ui": "1.1.0",
+    "@myrmidon/cadmus-profile-core": "1.1.0",
+    "@myrmidon/cadmus-refs-asserted-chronotope": "0.0.7",
     "@myrmidon/cadmus-refs-assertion": "0.0.4",
     "@myrmidon/cadmus-refs-doc-references": "^0.1.2",
     "@myrmidon/cadmus-refs-external-ids": "^0.1.3",
     "@myrmidon/cadmus-refs-historical-date": "^0.1.2",
     "@myrmidon/cadmus-refs-proper-name": "0.0.4",
     "@myrmidon/cadmus-reset-password": "0.3.0",
-    "@myrmidon/cadmus-state": "1.0.1",
-    "@myrmidon/cadmus-thesaurus-editor": "1.0.0",
-    "@myrmidon/cadmus-thesaurus-list": "1.0.0",
-    "@myrmidon/cadmus-thesaurus-ui": "1.0.0",
-    "@myrmidon/cadmus-ui": "2.0.0",
-    "@myrmidon/cadmus-ui-pg": "1.0.0",
-    "@myrmidon/ng-mat-tools": "0.0.3",
-    "@myrmidon/ng-tools": "0.0.4",
+    "@myrmidon/cadmus-state": "1.1.0",
+    "@myrmidon/cadmus-thesaurus-editor": "1.1.0",
+    "@myrmidon/cadmus-thesaurus-list": "1.1.0",
+    "@myrmidon/cadmus-thesaurus-ui": "1.1.0",
+    "@myrmidon/cadmus-ui": "3.1.0",
+    "@myrmidon/cadmus-ui-pg": "1.1.0",
+    "@myrmidon/ng-mat-tools": "0.1.0",
+    "@myrmidon/ng-tools": "0.1.0",
     "@types/diff-match-patch": "^1.0.32",
     "diff-match-patch": "^1.0.5",
     "gravatar": "^1.8.2",
-    "moment": "^2.29.1",
-    "ngx-markdown": "^13.0.0",
-    "ngx-moment": "^5.0.0",
+    "ngx-markdown": "^14.0.0",
     "ngx-monaco-editor": "^9.0.0",
     "rangy": "^1.3.0",
-    "rxjs": "~6.6.6",
+    "rxjs": "~7.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.2",
-    "@angular/cli": "~13.1.2",
-    "@angular/compiler-cli": "~13.1.1",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^14.0.2",
+    "@angular/cli": "^14.0.2",
+    "@angular/compiler-cli": "^14.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -82,6 +80,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.4.4"
+    "typescript": "~4.7.4"
   }
 }
